Changes and Bugs fixed during the different Releases
====================================================

Release 3.1 (January, 17th 2011)
================================

* First (inofficial) parts of OCL 2.3 are now supported by Dresden OCL
  - The new closure() iterator is supported by parser, interpreter and Ocl2Java.
  - The String operations <, <=, >=, > are supported.
  
* A Bug in the UML2 Metamodel has been fixed.
  - Class diagrams using stereotypes are now adapted correctly.
  
* Some bugs of the OCL Parser / Editor have been fixed.
  - Derive and Init constraints defined for static properties are now parsed correctly.
  - The escape underscore for reserved words can now be used.
  - The ASM of nested LetExpressions now has the right order.
  - OclAny.asSet() is now parsed correctly either if used implicitly or explicitly.
  - Wellformednes Rules for Iterators having at most one iterator variable are checked
    appropriately.
  
* Changes on Code Generators
  - The template engine was switched to String Template v. 3.2.1.
  
* Improvements on Ocl2Java
  - Generated aspects are named according to their constraints.
  - Statically defined operations and properties are now instrumented correctly.
  - No new super classes are generated for definitions, initial and derived values are
    introduced anymore.
  - Definitions, Initial and Derived values should now work correctly if fields are 
    accessed directly from other classes.
  - Type Literals are now transformed correctly in all known contexts.
  - InvalidLiterals should now be transformed correctly in all known contexts.
  - Generic types in LetExpressions are now transformed correctly.
  - Nested IterateExpressions using the same names for iterator variables are now
    handled correctly.
  - Nested IteratorExpressions using the same names for iterator variables are now
    handled correctly.
  - OclAny.asSet() is now transformed correctly.